# BSim

./: .gitignore  .ycm_extra_conf.py  AlphaSyn.cpp  AlphaSyn.h  CITATION.bib  CLEAN_ALL.cmake  CMakeList.txt  CMakeLists.txt  ExpSyn.cpp  ExpSyn.h  LICENSE  LIFNeuron.cpp  LIFNeuron.h  Makefile  Neuron.cpp  Neuron.h  NeuronBase.h  Population.h  README.md  SynapseBase.h  a.out  back.sh  build.sh  cells.py  cmake_install.cmake  constant.h  make.sh  makefile
.zcache/: DEBS_avail  ack-types
back/: Nengo_lowpass.h
backup/: AlphaSynapse.cpp  BasicSynapse.cpp  BuildNetwork.cpp  BuildNetwork.cpp.bak  BuildNetworks.cpp  ExpSynapse.cpp  GAlphaSynapses.cpp  GAlphaSynapses.cu  GAlphaSynapses.h  GBasicSynapses.cpp  GBasicSynapses.cu  GBasicSynapses.h  GExpSynapses.cu  GExpSynapses.h  GLIFNeuron.cpp  GLIFNeuron.cu  GLIFNeuron.h  GLIFNeuron.mpi.cpp  GLIFNeurons.cpp  GLIFNeurons.cu  GLIFNeurons.h  GLIFNeurons.mpi.cpp  GNeuron.h  GStaticSynapse.cpp  GStaticSynapse.cu  GStaticSynapse.h  GStaticSynapse.mpi.cpp  GStaticSynapses.cu  GSynapse.h  ID.h  IDPool.cpp  IDPool.h  IF_curr_exp.cpp.bak  InputNeuron.cpp  InputNeuron.h  LowpassSynapse.h.bak  MaxNeuron.cpp  MaxNeuron.cpp.bak  MultiGPUSimulator.cu.bak  NengoNeuron.cpp  (+8 more)
backup/array/: ArrayNeuron.h  GArrayNeurons.cu  array.h
backup/constant/: GConstantNeurons.cpp  constants.cu  constants.h
backup/izhikevich/: IzhikevichData.cpp  IzhikevichData.cu  IzhikevichData.kernel.cu  IzhikevichNeuron.cpp
backup/lif/: GLIFNeurons.cpp  GLIFNeurons.cu  GLIFNeurons.h  lif.cu
backup/lif2/: GLIFNeurons.h  lif.cu  lif.h
backup/nengo/: InputPopulation.cpp  NengoBase.h  NengoLowpass.cpp  NengoLowpass.h  NengoNetwork.cpp  NengoPopulation.cpp  NengoProbe.cpp  NengoReader.cpp
backup/net/: BuildNetwork.cpp  BuildNetworks.cpp  DistriNetwork.h  Network.h  SplitNetwork.cpp
backup/rw/: SNNWriter.cpp  SNNWriter.h
backup/static/: GStaticSynapses.cu  GStaticSynapses.h  StaticSynapse.h  static.cu
backup/stdp/: STDPData.cpp  STDPData.h  STDPData.kernel.cu  STDPData.mpi.cpp  STDPSynapse.h
backup/traubmiles/: TraubMilesData.cpp  TraubMilesData.cu  TraubMilesData.kernel.cu  TraubMilesNeuron.cpp  TraubMilesNeuron.h
bsim/: GLIFNeurons.cpp  GLIFNeurons.cu  GLIFNeurons.h  LIFData.cpp  LIFData.h  Synapse.py  __init__.py  array.py  arrayobj.py  cconnection.py  compiler.py  connection.py  cudamemop.py  data.py  data_generator.py  env.py  generator.py  lif.py  model.py  model_array.py  model_compiler.py  model_generator.py  network.py  neuron.py  neuron_model.py  population.py  projection.py  synapse.py  synapse_model.py  transition.py  utils.py
bsim/c_code/: STDPSynapse.cu  connection.data.cu  connection.h  cudamemop.cu  cudamemop.h  lif_curr_exp.compute.cu  lif_curr_exp.data.cu  lif_curr_exp.h  mem_op.h  runtime.cu  runtime.h  runtime_.cu  stdp_synapse.cu  stdp_synapse.data.cu  stdp_synapse.h  stdpsynapse.data.cu  stdpsynapse.h
bsim/code_gen/: connection.data.cu  cudamemop.cu  lif_curr_exp.compute.cu  lif_curr_exp.data.cu  lif_curr_exp.h  lif_curr_exp.py  runtime.cu  runtime.h  static.compute.cu  static.data.cu  static.h  static.py  stdp_synapse.py
bsim/py_code/: LIF_curr_exp.py  cconnection.py  cconnection_12_4.py  cconnection_24_15.py  lif_curr_exp.py  stdp_synapse.py  stdpsynapse.py
bsim/tests/: connection_test.py  env.py  expression_test.py  memop_test.py  network_test.py  population_test.py  projection_test.py  small_net_test.py  synapse_test.py  unittests.py
include/: .Neuron.h.swp  AlphaSyn.h  BSim.h  Connector.h  GNeuron.h  GSynapse.h  IF_curr_exp.h  LIFNeuron.h  Neuron.h  NeuronBase.h  Neurons.h  Population.h  SNNsim.h  Simulator.h  Simulators.h  Synapse.h  SynapseBase.h  Synapses.h  constant.h
model/: example.snn  lif.snn  static.snn
script/: .img2col.py.swp  LIFData.h  Model.py  binary_file_converter.py  column_merge.py  conv_test.py  convert_neuron_para.py  data_compare.py  data_diff.py  draw_fire.py  generate_func_gpu.py  generate_kernel_gpu.py  generate_model_cpu.py  generate_model_gpu.py  generate_type.py  generate_type_cpu.py  generate_type_functions.py  generate_type_gpu.py  img2col.py  line_diff.py  line_sort.py  line_sub.py  line_sum.py  load_data.py  motion.py  test.py  test_func.py  test_func_LIFE.py  vision.py
src/: :  AlphaSyn.cpp  AlphaSyn.h  AlphaSynapse.cpp  AlphaSynapse.h  Base.cpp  Base.h  BasicSynapse.cpp  BasicSynapse.cpp.bak  BasicSynapse.h  BasicSynapse.h.bak  CompositeNeuron.h  Connector.cpp  ConstantNeuron.cpp  ConstantNeuron.h  ExpSyn.cpp  ExpSyn.h  ExpSynapse.cpp  ExpSynapse.h  GAlphaSynapses.cpp  GAlphaSynapses.cu  GAlphaSynapses.h  GBasicSynapses.cpp  GBasicSynapses.cu  GBasicSynapses.h  GConstant.h  GConstantNeurons.cpp  GConstantNeurons.cu  GConstantNeurons.h  GExpSynapses.cpp  GExpSynapses.cu  GExpSynapses.h  GFunc.cu  GFunc.h  GLIFNeuron.cu  GLIFNeuron.h  GLIFNeurons.cpp  GLIFNeurons.cu  GLIFNeurons.h  GNetwork.cpp  (+75 more)
src/base/: Base.cpp  Base.h  CompositeNeuron.h  NeuronBase.cpp  NeuronBase.h  Population.h  PopulationBase.cpp  PopulationBase.h  SimInfo.cpp  SimInfo.h  SimulatorBase.cpp  SimulatorBase.h  SynapseBase.cpp  SynapseBase.h  constant.h  type.h
src/generator/: generator.cpp
src/gpu_utils/: BlockSize.h  GBuffers.cu  GBuffers.h  array.cu  array.h  constant.cu  constant.h  gpu_func.cu  gpu_func.h  gpu_kernel.cu  gpu_kernel.h  gpu_net_check.cu  gpu_net_copy.cu  gpu_neuron.cu  gpu_utils.cu  gpu_utils.h  lif.cu  lif.h  max.cu  max.h  mem_op.h  poisson.cu  poisson.h  runtime.cu  runtime.h  runtime_info.h  static.cu  static.h  tj.cu  tj.h
src/interface/: CompositeNeuron.h  Model.h  Neuron.cpp  Neuron.h  Simulator.cpp  Simulator.h  Synapse.h
src/model/: LIF.py  TJ.py  (+1 more)
test/: all.py  connection_test.py  expression_test.py  lif_test.py  lif_unit1_test.py  lif_unit1_test_v.std  lif_unit2_test.py  lif_unit2_test_v.std  lif_unit3_test.py  lif_unit3_test_v.std  lif_unit4_test.py  lif_unit4_test_v.std  lif_unit_test.py  makefile  memop_test.py  network_test.py  neural_test.cpp  population_test.py  projection_test.py  read_test.cpp  small_net_test.py  synapse_test.cpp  test.res  test.sh
tests/: unittests.py
(+377 files in other folders)
